[package]
name = "fcf"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo = "0.82.0"
clap = { version = "4.5.19", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[dev-dependencies]
pre-commit = "0.5.2"

[package.metadata.precommit]
fmt = "cargo fmt"
lint = "cargo clippy"
