[package]
name = "fcf"
version = "0.2.2"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Wojciech Zwoliński"] 
description = "Simple rust cli tool built to make accessing your configs faster"
rust-version = "1.80.1"
readme = "README.md"
repository = "https://git.staszic.waw.pl/kyod/fcf"
keywords = ["configuration", "config", "cli", "tool"]
categories = ["command-line-utilities"]
build = false


[dependencies]
cargo = "0.82.0"
clap = { version = "4.5.19", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[dev-dependencies]
pre-commit = "0.5.2"
cargo = "0.82.0"

[package.metadata.precommit]
fmt = "cargo fmt"
lint = "cargo clippy"
